[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "komihub-telegram-bot"
version = "1.0.0"
description = "KOMIHUB Telegram Bot Framework - Optimized for multiple hosting platforms"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "KOMIHUB Team", email = "admin@komihub.com"}
]
license = {text = "MIT"}
keywords = ["telegram", "bot", "aiogram", "framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "fastapi>=0.120.1",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "yt-dlp>=2025.10.22",
    "colorama>=0.4.6",
    "psutil>=7.1.2",
    "pillow",
    "qrcode[pil]>=7.4.2",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
# Development dependencies (disabled for now)
# dev = []

# Production dependencies
prod = [
    "gunicorn>=23.0.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.0.0",
]

[tool.setuptools]
# Include package data
include-package-data = true

[tool.setuptools.packages.find]
# Include all directories
include = ["*"]
exclude = ["test*", "docs*", "examples*", "*.py", "pyproject.toml", "*.md", "*.yaml", "*.yml", "*.lock", "data*", "logs*", "*.json", "*.txt"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "UP", # pyupgrade
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
